error.txt
make  all-recursive
make[1]: Entering directory '/home/Sederhana Gulo/projects/LuaLB'
Making all in .
make[2]: Entering directory '/home/Sederhana Gulo/projects/LuaLB'
make[2]: Leaving directory '/home/Sederhana Gulo/projects/LuaLB'
Making all in src
make[2]: Entering directory '/home/Sederhana Gulo/projects/LuaLB/src'
Making all in .
make[3]: Entering directory '/home/Sederhana Gulo/projects/LuaLB/src'
make[3]: Nothing to be done for 'all-am'.
make[3]: Leaving directory '/home/Sederhana Gulo/projects/LuaLB/src'
Making all in core
make[3]: Entering directory '/home/Sederhana Gulo/projects/LuaLB/src/core'
Making all in .
make[4]: Entering directory '/home/Sederhana Gulo/projects/LuaLB/src/core'
make[4]: Nothing to be done for 'all-am'.
make[4]: Leaving directory '/home/Sederhana Gulo/projects/LuaLB/src/core'
make[3]: Leaving directory '/home/Sederhana Gulo/projects/LuaLB/src/core'
Making all in graphics
make[3]: Entering directory '/home/Sederhana Gulo/projects/LuaLB/src/graphics'
Making all in .
make[4]: Entering directory '/home/Sederhana Gulo/projects/LuaLB/src/graphics'
make[4]: Nothing to be done for 'all-am'.
make[4]: Leaving directory '/home/Sederhana Gulo/projects/LuaLB/src/graphics'
make[3]: Leaving directory '/home/Sederhana Gulo/projects/LuaLB/src/graphics'
Making all in BGK
make[3]: Entering directory '/home/Sederhana Gulo/projects/LuaLB/src/BGK'
Making all in .
make[4]: Entering directory '/home/Sederhana Gulo/projects/LuaLB/src/BGK'
make[4]: Nothing to be done for 'all-am'.
make[4]: Leaving directory '/home/Sederhana Gulo/projects/LuaLB/src/BGK'
make[3]: Leaving directory '/home/Sederhana Gulo/projects/LuaLB/src/BGK'
Making all in Mix
make[3]: Entering directory '/home/Sederhana Gulo/projects/LuaLB/src/Mix'
Making all in .
make[4]: Entering directory '/home/Sederhana Gulo/projects/LuaLB/src/Mix'
make[4]: Nothing to be done for 'all-am'.
make[4]: Leaving directory '/home/Sederhana Gulo/projects/LuaLB/src/Mix'
make[3]: Leaving directory '/home/Sederhana Gulo/projects/LuaLB/src/Mix'
Making all in Landau
make[3]: Entering directory '/home/Sederhana Gulo/projects/LuaLB/src/Landau'
Making all in .
make[4]: Entering directory '/home/Sederhana Gulo/projects/LuaLB/src/Landau'
make[4]: Nothing to be done for 'all-am'.
make[4]: Leaving directory '/home/Sederhana Gulo/projects/LuaLB/src/Landau'
make[3]: Leaving directory '/home/Sederhana Gulo/projects/LuaLB/src/Landau'
Making all in lua
make[3]: Entering directory '/home/Sederhana Gulo/projects/LuaLB/src/lua'
Making all in .
make[4]: Entering directory '/home/Sederhana Gulo/projects/LuaLB/src/lua'
/cygdrive/c/hdf5/bin/h5cc -DHAVE_CONFIG_H -I. -I../.. -I../core -I../graphics -I../BGK -I../Mix -I../BGK -I../Landau -I../.. -I/cygdrive/c/hdf5/include -I/usr/local/include    -g -O2 -Wall -Werror-implicit-function-declaration -Wstrict-prototypes -Wmissing-prototypes -Wmissing-declarations -MT lb-lua.o -MD -MP -MF .deps/lb-lua.Tpo -c -o lb-lua.o lb-lua.c
lb-lua.c: In function ‘pushline’:
lb-lua.c:241:3: error: implicit declaration of function ‘lua_readline’ [-Werror=implicit-function-declaration]
   int readstatus = lua_readline(L, b, prmt);
   ^
lb-lua.c:252:3: error: implicit declaration of function ‘lua_freeline’ [-Werror=implicit-function-declaration]
   lua_freeline(L, b);
   ^
lb-lua.c: In function ‘loadline’:
lb-lua.c:263:5: error: implicit declaration of function ‘lua_strlen’ [-Werror=implicit-function-declaration]
     status = luaL_loadbuffer(L, lua_tostring(L, 1), lua_strlen(L, 1), "=stdin");
     ^
lb-lua.c:271:3: error: implicit declaration of function ‘lua_saveline’ [-Werror=implicit-function-declaration]
   lua_saveline(L, 1);
   ^
lb-lua.c: In function ‘pmain’:
lb-lua.c:443:5: error: implicit declaration of function ‘lua_stdin_is_tty’ [-Werror=implicit-function-declaration]
     if (lua_stdin_is_tty()) {
     ^
lb-lua.c: In function ‘main’:
lb-lua.c:478:3: error: implicit declaration of function ‘lua_cpcall’ [-Werror=implicit-function-declaration]
   status = lua_cpcall(L, &pmain, &s);
   ^
cc1: some warnings being treated as errors
Makefile:262: recipe for target 'lb-lua.o' failed
make[4]: *** [lb-lua.o] Error 1
make[4]: Leaving directory '/home/Sederhana Gulo/projects/LuaLB/src/lua'
Makefile:282: recipe for target 'all-recursive' failed
make[3]: *** [all-recursive] Error 1
make[3]: Leaving directory '/home/Sederhana Gulo/projects/LuaLB/src/lua'
Makefile:189: recipe for target 'all-recursive' failed
make[2]: *** [all-recursive] Error 1
make[2]: Leaving directory '/home/Sederhana Gulo/projects/LuaLB/src'
Makefile:226: recipe for target 'all-recursive' failed
make[1]: *** [all-recursive] Error 1
make[1]: Leaving directory '/home/Sederhana Gulo/projects/LuaLB'
Makefile:165: recipe for target 'all' failed
make: *** [all] Error 2
